# bitcoin-consensus-proof

./: .env  .gitignore  Cargo.toml  Makefile  README.md  bitcoin_build.dockerfile  output.txt
.githooks/: pre-commit
bitcoin/: Cargo.toml  build.rs
bitcoin-core/: Cargo.toml
bitcoin-core/src/: block.rs  header_chain.rs  lib.rs  merkle_tree.rs  transaction.rs
bitcoin/guest/: Cargo.toml
bitcoin/guest/src/: main.rs
core/: Cargo.toml
core/src/: bitcoin_merkle.rs  block.rs  constants.rs  hashes.rs  header_chain.rs  lib.rs  params.rs  softfork_manager.rs  transaction.rs  utxo_set.rs  witness.rs  zkvm.rs
core/src/script/: data_structures.rs  error.rs  mod.rs  signatures.rs  txout.rs
elfs/: mainnet-bitcoin-guest  regtest-bitcoin-guest  signet-bitcoin-guest  testnet4-bitcoin-guest
host/: Cargo.toml
host/src/: api_types.rs  lib.rs  main.rs  mock_host.rs  rocks_db.rs  sqlite.rs
host/src/jmt_host/: mock.rs  mod.rs  rocks_db.rs
prover/: Cargo.toml
test_dir/: test_merkle.rs
