[workspace]
resolver = "2"
members = ["core", "host", "bitcoin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
hex = "0.4.3"
risc0-zkvm = { version="1.2.3", features = ["prove"]}
risc0-zkp = "1.2.3"
# env_logger = "0.10"
borsh = {version = "1.5.3", features = ["derive"] }
serde = "1.0"
serde_json = "1.0.108"
anyhow = { version = "1.0", default-features = false}
bitcoin = {version = "0.32.5", features = ["serde"] }
bitcoincore-rpc = "0.19.0"
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0", default-features = false }
num-bigint = { version="0.4.5", features=["std"] }
num-traits = "0.2.19"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"] }
tempfile = "3.10.1"

# [features]
# cuda = ["risc0-zkvm/cuda"]
# metal = ["risc0-zkvm/metal"]

