[package]
name = "bitcoin-consensus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = {version = "1.5.3", features = ["derive"] }
risc0-zkvm = { version = "1.2.5", default-features = false, features = ["std"] }
sha2 =  { version = "0.10.8", default-features = false }
# risc0-groth16.workspace = true
hex = "0.4.3"
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0", default-features = false }
serde_json = "1.0.108"
num-bigint = { version="0.4.5", features=["std"] }
num-traits = "0.2.19"
bitcoin = { version = "0.32.5", features = ["rand-std", "serde", "bitcoinconsensus"] }
serde = { version = "1.0", default-features = false }
jmt = { version = "0.11.0", features = ["sha2"] }
ripemd = "0.1.3"

[dev-dependencies]
hex-literal = "0.4.1"
