[package]
name = "bitcoin-consensus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = {version = "1.5.3", features = ["derive"] }
risc0-zkvm = { version = "2.0.1", default-features = false, features = ["std", "unstable"] }
sha2 =  { version = "0.10.8", default-features = false }
k256 = { version = "=0.13.4", default-features = false, features = ["ecdsa", "schnorr"] }
hex = "0.4.3"
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0", default-features = false }
serde_json = "1.0.108"
num-bigint = { version="0.4.5", features=["std"] }
num-traits = "0.2.19"
bitcoin = { version = "0.32.5", features = ["serde"] }
serde = { version = "1.0", default-features = false }
jmt = { version = "0.11.0", features = ["sha2"] }
ripemd = "0.1.3"
secp256k1 = { version = "0.29.0", default-features = false, features = ["hashes", "alloc"] }
lazy_static = "1.4.0"

[dev-dependencies]
hex-literal = "0.4.1"
bincode = { version = "1.3.3" }