[package]
name = "bitcoin-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
bitcoin-consensus-core = { path = "../../core" }

[[example]]
name = "guest"
path ="src/main.rs"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }